--- a/Nexus-main/hizmetler.html
+++ b/Nexus-main/hizmetler.html
@@ -34,9 +34,9 @@
 
         <!-- Hesap Bölümü -->
         <div class="account">
-            <a href="giris.html"><button class="account-btn">Giriş Yap</button></a>
+            <a href="giris.html" class="login-button"><button class="account-btn">Giriş Yap</button></a>
             <a href="hesap.html" class="user-icon">
-                <div><img src="user.png" alt=""></div>
+                <div><img id="navProfileImg" src="user.png" alt="Profil"></div>
             </a>
         </div>
 
@@ -154,6 +154,21 @@
                     localStorage.setItem('darkMode', 'disabled');
                 }
             });
+
+            // Giriş durumunu ve profil fotoğrafını kontrol et
+            const isLoggedIn = localStorage.getItem('isLoggedIn') === 'true';
+            const savedPhoto = localStorage.getItem('userPhoto');
+
+            if (isLoggedIn) {
+                // Giriş yap butonunu gizle
+                document.querySelector('.login-button').style.display = 'none';
+
+                // Profil fotoğrafını göster
+                if (savedPhoto) {
+                    document.getElementById('navProfileImg').src = savedPhoto;
+                    document.querySelector('.user-icon').classList.add('has-profile');
+                }
+            }
         });
     </script>
 </body>
