--- a/Nexus-main/teachers.html
+++ b/Nexus-main/teachers.html
@@ -34,9 +34,9 @@
 
         <!-- Hesap Bölümü -->
         <div class="account">
-            <a href="giris.html"><button class="account-btn">Giriş Yap</button></a>
+            <a href="giris.html" class="login-button"><button class="account-btn">Giriş Yap</button></a>
             <a href="hesap.html" class="user-icon">
-                <div><img src="user.png" alt=""></div>
+                <div><img id="navProfileImg" src="user.png" alt="Profil"></div>
             </a>
         </div>
 
@@ -234,42 +234,61 @@
     </footer>
 
     <script>
-        // Dark mode kontrolü ve toggle fonksiyonu
         document.addEventListener('DOMContentLoaded', function () {
+            // Dark mode toggle
             const darkModeToggle = document.getElementById('darkModeToggle');
             const body = document.body;
 
-            // Sayfa yüklendiğinde dark mode durumunu kontrol et
+            // Check dark mode state on page load
             const isDarkMode = localStorage.getItem('darkMode') === 'enabled';
             if (isDarkMode) {
                 body.classList.add('dark-mode');
             }
 
-            // Dark mode toggle butonu tıklama olayı
+            // Dark mode toggle function
             darkModeToggle.addEventListener('click', () => {
                 body.classList.toggle('dark-mode');
 
-                // Dark mode durumunu localStorage'a kaydet
+                // Save dark mode state
                 if (body.classList.contains('dark-mode')) {
                     localStorage.setItem('darkMode', 'enabled');
                 } else {
                     localStorage.setItem('darkMode', 'disabled');
                 }
             });
+
+            // Giriş durumunu ve profil fotoğrafını kontrol et
+            const isLoggedIn = localStorage.getItem('isLoggedIn') === 'true';
+            const savedPhoto = localStorage.getItem('userPhoto');
+
+            if (isLoggedIn) {
+                // Giriş yap butonunu gizle
+                document.querySelector('.login-button').style.display = 'none';
+
+                // Profil fotoğrafını göster
+                if (savedPhoto) {
+                    document.getElementById('navProfileImg').src = savedPhoto;
+                    document.querySelector('.user-icon').classList.add('has-profile');
+                }
+            }
+
+            // Initialize filter functionality
+            filterTeachers();
         });
 
-        // Filtreleme fonksiyonu
+        // Filtering functions for teachers
         function filterTeachers() {
             const subjectFilter = document.getElementById('subjectFilter').value;
             const ratingFilter = parseFloat(document.getElementById('ratingFilter').value);
-            const teachers = document.getElementsByClassName('teacher-card');
 
-            Array.from(teachers).forEach(teacher => {
-                const teacherSubject = teacher.querySelector('.teacher-subject').textContent;
-                const teacherRating = parseFloat(teacher.querySelector('.stat-number').textContent);
+            const teachers = document.querySelectorAll('.teacher-card');
 
-                const subjectMatch = subjectFilter === 'all' || teacherSubject === subjectFilter;
-                const ratingMatch = teacherRating >= ratingFilter;
+            teachers.forEach(teacher => {
+                const subject = teacher.querySelector('.teacher-subject').textContent;
+                const rating = parseFloat(teacher.querySelector('.stat-number').textContent);
+
+                const subjectMatch = subjectFilter === 'all' || subject === subjectFilter;
+                const ratingMatch = rating >= ratingFilter;
 
                 if (subjectMatch && ratingMatch) {
                     teacher.style.display = 'flex';
@@ -279,9 +298,6 @@
                 }
             });
         }
-
-        // Sayfa yüklendiğinde filtrelemeyi başlat
-        document.addEventListener('DOMContentLoaded', filterTeachers);
     </script>
 
     <style>
