--- a/Nexus-main/gizlilik.html
+++ b/Nexus-main/gizlilik.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gizlilik - Leornova</title>
     <link rel="stylesheet" href="index.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Trifielia&display=swap');
+
+        .privacy-card p.privacy-desc,
+        .privacy-card .privacy-status {
+            font-family: 'Trifielia', sans-serif;
+            font-size: 0.95em;
+        }
+    </style>
 
 </head>
 <script>
