--- a/Nexus-main/guvenlik.html
+++ b/Nexus-main/guvenlik.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Güvenlik - Leornova</title>
     <link rel="stylesheet" href="index.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Trifielia&display=swap');
+
+        .security-card p.security-desc,
+        .security-card .device-details h4,
+        .security-card .device-details p,
+        .security-card .log-text,
+        .security-card .log-time,
+        .step p {
+            font-family: 'Trifielia', sans-serif;
+            font-size: 0.95em;
+        }
+    </style>
 </head>
 <script>
     // Dark mode check before page load
