--- a/Nexus-main/teachers.html
+++ b/Nexus-main/teachers.html
@@ -235,6 +235,27 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
+            // UI güncelleme fonksiyonu
+            function updateUIBasedOnLoginState() {
+                const isLoggedIn = localStorage.getItem('isLoggedIn') === 'true';
+                const savedPhoto = localStorage.getItem('userPhoto');
+                const accountSection = document.querySelector('.account');
+
+                if (isLoggedIn) {
+                    // Giriş yap butonunu gizle
+                    document.querySelector('.login-button').style.display = 'none';
+
+                    // Profil fotoğrafını göster
+                    if (savedPhoto) {
+                        document.getElementById('navProfileImg').src = savedPhoto;
+                        document.querySelector('.user-icon').classList.add('has-profile');
+                    }
+                }
+
+                // UI'ın yüklenmesini tamamla
+                accountSection.classList.add('loaded');
+            }
+
             // Dark mode toggle
             const darkModeToggle = document.getElementById('darkModeToggle');
             const body = document.body;
@@ -257,20 +278,8 @@
                 }
             });
 
-            // Giriş durumunu ve profil fotoğrafını kontrol et
-            const isLoggedIn = localStorage.getItem('isLoggedIn') === 'true';
-            const savedPhoto = localStorage.getItem('userPhoto');
-
-            if (isLoggedIn) {
-                // Giriş yap butonunu gizle
-                document.querySelector('.login-button').style.display = 'none';
-
-                // Profil fotoğrafını göster
-                if (savedPhoto) {
-                    document.getElementById('navProfileImg').src = savedPhoto;
-                    document.querySelector('.user-icon').classList.add('has-profile');
-                }
-            }
+            // UI'ı güncelle
+            updateUIBasedOnLoginState();
 
             // Initialize filter functionality
             filterTeachers();
